--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,8 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: black;
-  background-color: #ffffff;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/* src/index.css */
-
-body {
-  font-family: sans-serif;
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-ul,
-ol {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto";
   list-style: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
+  text-decoration: none;
 }
